--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,14 +42,15 @@
 }
 #es-rc #es-rc-content .es-link {
   display: block;
-  max-width: 150px;
+  max-width: 90px;
   margin: 0 auto;
-  padding: 15px;
+  padding: 10px;
   text-decoration: none;
   text-transform: uppercase;
   background-color: #1d1d1b;
   color: #ffffff;
   text-align: center;
+  font-size: 13px;
 }
 #es-rc #es-rc-content .es-kv {
   margin-bottom: 50px;
@@ -305,11 +306,11 @@
   font-family: inherit;
   font-weight: inherit;
   margin-bottom: 20px;
-  font-size: 14px;
+  font-size: 13px;
 }
 #es-rc #es-rc-content .es-features__list {
   padding-left: 25px;
-  font-size: 14px;
+  font-size: 13px;
 }
 #es-rc #es-rc-content .es-features__item {
   margin: 0;
@@ -394,6 +395,11 @@
   justify-content: center;
 }
 #es-rc #es-rc-content .es-cross__card-image {
+  max-width: 100%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  height: 225px;
   margin-bottom: 20px;
 }
 #es-rc #es-rc-content .es-cross__card-title {
@@ -405,6 +411,7 @@
   font-weight: inherit;
   font-weight: 700;
   text-align: center;
+  font-size: 14px;
 }
 #es-rc #es-rc-content .es-cross__card-description {
   margin: 0;
@@ -416,17 +423,23 @@
   text-align: center;
   margin-bottom: 20px;
   font-weight: 500;
+  font-size: 14px;
 }
 @media screen and (min-width: 1200px) {
   #es-rc #es-rc-content .es-title {
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
   #es-rc #es-rc-content .es-section-title {
     font-size: 25px;
   }
   #es-rc #es-rc-content .es-kv {
-    min-height: 800px;
+    min-height: 870px;
+  }
+  #es-rc #es-rc-content .es-kv__logo {
+    margin-left: 12px;
+    margin-top: 17px;
+    max-width: 135px;
   }
   #es-rc #es-rc-content .es-kv__description--mobile {
     display: none;
@@ -436,7 +449,7 @@
   }
   #es-rc #es-rc-content .es-kv__content {
     top: 11%;
-    left: 1%;
+    left: 4%;
   }
   #es-rc #es-rc-content .es-kv__title {
     font-size: 30px;
@@ -460,25 +473,33 @@
     position: relative;
     z-index: 2;
   }
-  #es-rc #es-rc-content .es-kv__image-1, #es-rc #es-rc-content .es-kv__image-2 {
+  #es-rc #es-rc-content .es-kv__image-1 {
+    width: 475px;
+  }
+  #es-rc #es-rc-content .es-kv__image-2 {
     width: 450px;
   }
   #es-rc #es-rc-content .es-kv__description {
     position: absolute;
-    bottom: 18%;
-    right: 5%;
+    bottom: 17%;
+    right: 6%;
     max-width: 220px;
     text-align: right;
+    font-size: 16px;
+    line-height: 1.4;
+  }
+  #es-rc #es-rc-content .es-kv__description--large {
+    font-size: 50px;
   }
   #es-rc #es-rc-content .es-kv__description-first {
     position: absolute;
-    bottom: 5%;
-    right: 26%;
+    bottom: 3%;
+    right: 29%;
   }
   #es-rc #es-rc-content .es-kv__description-second {
     position: absolute;
-    bottom: -1%;
-    right: 6%;
+    bottom: -5%;
+    right: 7%;
   }
   #es-rc #es-rc-content .es-kv__deco-image-1 {
     display: block;
@@ -496,16 +517,20 @@
     max-width: 100%;
     display: block;
     margin: 0 auto;
-    max-width: 439px;
-    bottom: -13%;
+    max-width: 483px;
+    bottom: -16%;
     right: 2%;
   }
   #es-rc #es-rc-content .es-kv__disclaimer {
     position: absolute;
     font-size: 7px;
-    bottom: 2%;
-    right: 19%;
+    bottom: -2%;
+    right: 25%;
     font-weight: 900;
+  }
+  #es-rc #es-rc-content .es-technology {
+    padding-top: 0;
+    margin-bottom: 76px;
   }
   #es-rc #es-rc-content .es-technology__deco-image-1 {
     max-width: 100%;
@@ -513,17 +538,22 @@
     margin: 0 auto;
     width: 200px;
     position: absolute;
-    top: 0%;
-    left: -8%;
+    top: -22%;
+    left: -4%;
   }
   #es-rc #es-rc-content .es-technology__subtitle {
+    margin-bottom: 35px;
     font-size: 20px;
   }
   #es-rc #es-rc-content .es-technology__description {
     max-width: 90%;
     margin: 0 auto;
+    margin-bottom: 30px;
     text-align: center;
     font-size: 17px;
+  }
+  #es-rc #es-rc-content .es-technology__list {
+    margin-left: 40px;
   }
   #es-rc #es-rc-content .es-features__deco-image-1 {
     display: block;
@@ -532,8 +562,8 @@
     margin: 0 auto;
     width: 55%;
     position: absolute;
-    top: -38%;
-    right: -9%;
+    top: -34%;
+    right: -5%;
   }
   #es-rc #es-rc-content .es-features__deco-image-2 {
     display: block;
@@ -554,7 +584,7 @@
     align-self: flex-start;
     max-width: 441px;
     margin: 0 auto;
-    margin-left: 5%;
+    margin-left: 10%;
   }
   #es-rc #es-rc-content .es-features__image {
     position: absolute;
@@ -605,8 +635,8 @@
     z-index: 1;
   }
   #es-rc #es-rc-content .es-ba__before {
-    top: 20%;
-    left: 12%;
+    top: 18%;
+    left: 9%;
     margin: 0;
     padding: 0;
     line-height: inherit;
@@ -614,12 +644,12 @@
     font-family: inherit;
     font-weight: inherit;
     font-weight: 800;
-    font-size: 35px;
+    font-size: 40px;
     text-transform: uppercase;
     z-index: 2;
   }
   #es-rc #es-rc-content .es-ba__after {
-    top: 20%;
+    top: 18%;
     right: 18%;
     font-size: 35px;
     z-index: 2;
