--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -70,14 +70,15 @@ $color-secondary: #ffffff;
 
   .es-link {
     display: block;
-    max-width: 150px;
+    max-width: 90px;
     margin: 0 auto;
-    padding: 15px;
+    padding: 10px;
     text-decoration: none;
     text-transform: uppercase;
     background-color: $color-main;
     color: $color-secondary;
     text-align: center;
+    font-size: 13px;
   }
 
   .es-kv {
@@ -304,12 +305,12 @@ $color-secondary: #ffffff;
     &__content-description {
       @include text;
       margin-bottom: 20px;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     &__list {
       padding-left: 25px;
-      font-size: 14px;
+      font-size: 13px;
     }
 
     &__item {
@@ -400,6 +401,9 @@ $color-secondary: #ffffff;
     }
 
     &__card-image {
+      @include img;
+      margin-top: 20px;
+      height: 225px;
       margin-bottom: 20px;
     }
 
@@ -407,6 +411,7 @@ $color-secondary: #ffffff;
       @include text;
       font-weight: 700;
       text-align: center;
+      font-size: 14px;
     }
 
     &__card-description {
@@ -414,13 +419,14 @@ $color-secondary: #ffffff;
       text-align: center;
       margin-bottom: 20px;
       font-weight: 500;
+      font-size: 14px;
     }
   }
 
   @media screen and (min-width: 1200px) {
     .es-title {
       font-size: 35px;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
     }
 
     .es-section-title {
@@ -428,7 +434,13 @@ $color-secondary: #ffffff;
     }
 
     .es-kv {
-      min-height: 800px;
+      min-height: 870px;
+
+      &__logo {
+        margin-left: 12px;
+        margin-top: 17px;
+        max-width: 135px;
+      }
 
       &__description {
         &--mobile {
@@ -442,7 +454,7 @@ $color-secondary: #ffffff;
 
       &__content {
         top: 11%;
-        left: 1%;
+        left: 4%;
       }
 
       &__title {
@@ -471,29 +483,38 @@ $color-secondary: #ffffff;
         z-index: 2;
       }
 
-      &__image-1,
+      &__image-1 {
+        width: 475px;
+      }
+
       &__image-2 {
         width: 450px;
       }
 
       &__description {
         position: absolute;
-        bottom: 18%;
-        right: 5%;
+        bottom: 17%;
+        right: 6%;
         max-width: 220px;
         text-align: right;
+        font-size: 16px;
+        line-height: 1.4;
+
+        &--large {
+          font-size: 50px;
+        }
       }
 
       &__description-first {
         position: absolute;
-        bottom: 5%;
-        right: 26%;
+        bottom: 3%;
+        right: 29%;
       }
 
       &__description-second {
         position: absolute;
-        bottom: -1%;
-        right: 6%;
+        bottom: -5%;
+        right: 7%;
       }
 
       &__deco-image-1 {
@@ -509,38 +530,47 @@ $color-secondary: #ffffff;
         display: block;
         position: absolute;
         @include img;
-        max-width: 439px;
-        bottom: -13%;
+        max-width: 483px;
+        bottom: -16%;
         right: 2%;
       }
 
       &__disclaimer {
         position: absolute;
         font-size: 7px;
-        bottom: 2%;
-        right: 19%;
+        bottom: -2%;
+        right: 25%;
         font-weight: 900;
       }
     }
 
     .es-technology {
+      padding-top: 0;
+      margin-bottom: 76px;
+
       &__deco-image-1 {
         @include img;
         width: 200px;
         position: absolute;
-        top: 0%;
-        left: -8%;
+        top: -22%;
+        left: -4%;
       }
 
       &__subtitle {
+        margin-bottom: 35px;
         font-size: 20px;
       }
 
       &__description {
         max-width: 90%;
         margin: 0 auto;
+        margin-bottom: 30px;
         text-align: center;
         font-size: 17px;
+      }
+
+      &__list {
+        margin-left: 40px;
       }
     }
 
@@ -550,8 +580,8 @@ $color-secondary: #ffffff;
         @include img;
         width: 55%;
         position: absolute;
-        top: -38%;
-        right: -9%;
+        top: -34%;
+        right: -5%;
       }
 
       &__deco-image-2 {
@@ -580,7 +610,7 @@ $color-secondary: #ffffff;
         align-self: flex-start;
         max-width: 441px;
         margin: 0 auto;
-        margin-left: 5%;
+        margin-left: 10%;
       }
 
       &__image {
@@ -638,17 +668,17 @@ $color-secondary: #ffffff;
       }
 
       &__before {
-        top: 20%;
-        left: 12%;
+        top: 18%;
+        left: 9%;
         @include text;
         font-weight: 800;
-        font-size: 35px;
+        font-size: 40px;
         text-transform: uppercase;
         z-index: 2;
       }
 
       &__after {
-        top: 20%;
+        top: 18%;
         right: 18%;
         font-size: 35px;
         z-index: 2;
