--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -97,6 +97,7 @@ $color-secondary: #ffffff;
       left: 1%;
       -webkit-animation: slideleft 0.5s ease-in-out;
       animation: slideleft 0.5s ease-in-out;
+      z-index: 3;
     }
 
     &__title {
@@ -118,6 +119,8 @@ $color-secondary: #ffffff;
       font-weight: 600;
       text-align: left;
       font-size: 13px;
+      position: relative;
+      z-index: 3;
     }
 
     &__image {
@@ -453,14 +456,18 @@ $color-secondary: #ffffff;
       }
 
       &__content {
-        top: 11%;
-        left: 4%;
+        top: 10%;
+        left: 2%;
       }
 
       &__title {
-        font-size: 30px;
+        font-size: 35px;
         z-index: 3;
         position: relative;
+
+        &--bold {
+          font-size: 35px;
+        }
       }
 
       &__subtitle {
