--- a/EAN/style/styles.css
+++ b/EAN/style/styles.css
@@ -170,6 +170,8 @@
   position: relative;
   padding-top: 50px;
   margin-bottom: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 #es-rc #es-rc-content .es-technology__deco-image-1 {
   max-width: 100%;
@@ -207,6 +209,7 @@
   color: inherit;
   font-family: inherit;
   font-weight: inherit;
+  margin-bottom: 10px;
   font-weight: 500;
   text-align: center;
   position: relative;
@@ -428,6 +431,12 @@
   font-weight: 500;
   font-size: 14px;
 }
+@media screen and (min-width: 800px) {
+  #es-rc #es-rc-content .es-kv__image-1 {
+    margin-right: 0;
+    margin-left: auto;
+  }
+}
 @media screen and (min-width: 1200px) {
   #es-rc #es-rc-content .es-title {
     font-size: 35px;
@@ -594,7 +603,7 @@
   }
   #es-rc #es-rc-content .es-features__image {
     position: absolute;
-    height: 350px;
+    height: 375px;
     top: 5%;
     right: 15%;
   }
