--- a/4067971066486/style/styles.css
+++ b/4067971066486/style/styles.css
@@ -1,5 +1,5 @@
 #es-rc #es-rc-content {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.2;
@@ -23,14 +23,14 @@
 }
 #es-rc #es-rc-content .es-title {
   text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 25px;
   color: #1d1d1b;
   font-weight: 700;
 }
 #es-rc #es-rc-content .es-section-title {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   font-size: 16px;
   color: #1d1d1b;
@@ -137,7 +137,8 @@
 #es-rc #es-rc-content .es-kv__description--large sup {
   vertical-align: text-top;
 }
-#es-rc #es-rc-content .es-kv__description-first, #es-rc #es-rc-content .es-kv__description-second {
+#es-rc #es-rc-content .es-kv__description-first,
+#es-rc #es-rc-content .es-kv__description-second {
   margin: 0;
   padding: 0;
   line-height: inherit;
@@ -149,7 +150,8 @@
   text-align: center;
   margin-bottom: 30px;
 }
-#es-rc #es-rc-content .es-kv__description-first sup, #es-rc #es-rc-content .es-kv__description-second sup {
+#es-rc #es-rc-content .es-kv__description-first sup,
+#es-rc #es-rc-content .es-kv__description-second sup {
   vertical-align: text-top;
 }
 #es-rc #es-rc-content .es-kv__disclaimer {
@@ -163,7 +165,8 @@
   font-size: 10px;
   text-align: center;
 }
-#es-rc #es-rc-content .es-kv__deco-image-1, #es-rc #es-rc-content .es-kv__deco-image-2 {
+#es-rc #es-rc-content .es-kv__deco-image-1,
+#es-rc #es-rc-content .es-kv__deco-image-2 {
   display: none;
 }
 #es-rc #es-rc-content .es-technology {
@@ -317,6 +320,13 @@
 #es-rc #es-rc-content .es-features__list {
   padding-left: 25px;
   font-size: 13px;
+  position: relative;
+}
+#es-rc #es-rc-content .es-features__disclaimer {
+  font-size: 8px;
+  position: absolute;
+  left: 0;
+  bottom: -30px;
 }
 #es-rc #es-rc-content .es-features__item {
   margin: 0;
@@ -331,7 +341,8 @@
 #es-rc #es-rc-content .es-ba {
   margin-bottom: 50px;
 }
-#es-rc #es-rc-content .es-ba__deco-image-1, #es-rc #es-rc-content .es-ba__deco-image-2 {
+#es-rc #es-rc-content .es-ba__deco-image-1,
+#es-rc #es-rc-content .es-ba__deco-image-2 {
   display: none;
 }
 #es-rc #es-rc-content .es-ba__image {
@@ -686,4 +697,4 @@
   to {
     opacity: 1;
   }
-}/*# sourceMappingURL=styles.css.map */
+} /*# sourceMappingURL=styles.css.map */
